fixed btn color on mobile, resizing textArea while edidint

--- a/src/components/CssModule/NewCard.module.scss
+++ b/src/components/CssModule/NewCard.module.scss
@@ -187,6 +187,7 @@ textarea {
 
 .buttonCardOne {
 	background: var(--White, #fff);
+	color: var(--accent);
 }
 
 .buttonCardSecond {
